--- a/jenkins/config/casc.yaml
+++ b/jenkins/config/casc.yaml
@@ -7,6 +7,14 @@ credentials:
           id: "github-token"
           scope: GLOBAL
           secret: ${GITHUB_ACCESS_TOKEN}
+      # https://github.com/jenkinsci/github-branch-source-plugin/blob/master/docs/github-app.adoc
+      - gitHubApp:
+            appID: ${GITHUB_APP_ID}
+            description: "GitHub app"
+            id: "github-app"
+            # apiUri: https://my-custom-github-enterprise.com/api/v3 # optional only required for GitHub enterprise
+            privateKey: "${readFile:${SSH_PRIVATE_FILE_PATH}}"
+            # privateKey: "${GITHUB_PRIVATE_KEY}"
 
 security:
   queueItemAuthenticator:
