--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -4,9 +4,9 @@ ARG DOCKER_GID
 ENV JENKINS_OPTS="--prefix=/jenkins --handlerCountMax=300 --logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war"
 ENV CASC_JENKINS_CONFIG="/usr/share/jenkins/ref/casc.yaml"
 USER root
-COPY --chown=jenkins:jenkins ./config/executors.groovy /usr/share/jenkins/ref/init.groovy.d/executors.groovy
 COPY --chown=jenkins:jenkins ./config/plugins.txt /usr/share/jenkins/ref/plugins.txt
 COPY --chown=jenkins:jenkins ./config/keys/converted-github-app.pem /tmp/converted-github-app.pem
+COPY --chown=jenkins:jenkins ./config/DSL-jobs /tmp/DSL-jobs
 #### Mounting to ease development
 #COPY --chown=jenkins:jenkins ./config/casc.yaml /usr/share/jenkins/ref/casc.yaml
 RUN mkdir /var/log/jenkins
@@ -16,11 +16,11 @@ RUN chown -R jenkins:jenkins /var/cache/jenkins
 RUN groupadd -g ${DOCKER_GID} docker
 RUN usermod -a -G docker jenkins
 
-#### Commented out for dev purposes
-RUN apt-get update \
-    && apt-get install -y \
-    docker \
-    docker.io
+#### Commented out for dev purposes, uncomment it for a normal run
+# RUN apt-get update \
+#     && apt-get install -y \
+#     docker \
+#     docker.io
 RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
 
 USER jenkins
