--- a/jenkins/config/casc.yaml
+++ b/jenkins/config/casc.yaml
@@ -23,6 +23,16 @@ security:
           strategy: triggeringUsersAuthorizationStrategy
 
 jenkins:
+  numExecutors: 0
+  systemMessage: |
+    Welcome to our build server.
+
+    This Jenkins is 100% configured and managed 'as code'.
+    Config is now mostly handled by the 'Jenkins Configuration as Code' (JCasC) plugin.
+    JCasC config can be found in the jenkins.yaml file in the $JENKINS_HOME/casc/ folder.
+
+    Some settings are still injected from init.groovy.d scripts,
+    but these settings will be ported over to JCasC as support becomes available. 
   securityRealm:
     github:
     # Need to create OAuth connector in GitHub
@@ -82,3 +92,16 @@ unclassified:
         apiUrl: "https://api.github.com"
         credentialsId: "github-token"
         manageHooks: true
+
+# jobs:
+#   - file: /tmp/DSL-jobs/seed.groovy
+
+tool:
+  dockerTool:
+    installations:
+    - name: "docker-latest"
+      properties:
+      - installSource:
+          installers:
+            - fromDocker:
+                version: latest
