Adding seed/example github org/user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - GITHUB_APP_ID=${GITHUB_APP_ID}
       - DOCKER_URI=${DOCKER_URI}
       - SSH_PRIVATE_FILE_PATH=${SSH_PRIVATE_FILE_PATH}
+      - ADMIN_USERS=${ADMIN_USERS}
+      - GITHUB_REPO_OWNER=${GITHUB_REPO_OWNER}
 
     ports:
       - 8080:8080
