--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./config/jenkins.conf /etc/nginx/conf.d/jenkins.conf
+COPY ./config/endpoints.conf /etc/nginx/conf.d/endpoints.conf
 COPY ./config/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx"]
