--- a/web/config/endpoints.conf
+++ b/web/config/endpoints.conf
@@ -10,6 +10,15 @@ server {
   access_log off;
   ignore_invalid_headers off;
 
+  location /vault {
+                proxy_pass http://vault:8200;
+                proxy_redirect     http://vault:8200/vault/ /ui/vault;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto https;
+        }
+        
   location /userContent {
     # have nginx handle all the static requests to userContent folder
     # note : This is the $JENKINS_HOME dir
@@ -21,7 +30,7 @@ server {
     }
     sendfile on;
   }
-    location /jenkins {
+  location /jenkins {
    sendfile off;
    proxy_pass http://jenkins:8080/jenkins/;
    
