--- a/web/config/endpoints.conf.template
+++ b/web/config/endpoints.conf.template
@@ -5,14 +5,15 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-  listen 80;
-  server_name mordor;
+  listen ${NGINX_PORT};
+  server_name ${NGINX_HOST};
   access_log off;
   ignore_invalid_headers off;
 
   location / {
     ##TODO Need to figure out how to run on a different path
-          proxy_pass http://vault:8200/;
+          # proxy_pass http://vault:8200/;
+          proxy_pass ${VAULT_HOST}:${VAULT_PORT}/;
           proxy_set_header   Host $host;
           proxy_set_header   X-Real-IP $remote_addr;
           proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,11 +31,11 @@ server {
     }
     sendfile on;
   }
-  location /jenkins {
+  location /${JENKINS_PATH} {
    sendfile off;
-   proxy_pass http://jenkins:8080/jenkins/;
+   proxy_pass ${JENKINS_URL}:${JENKINS_PORT}/${JENKINS_PATH}/;
    
-   proxy_redirect     http://jenkins:8080/jenkins/ /jenkins/;
+   proxy_redirect     ${JENKINS_URL}:${JENKINS_PORT}/${JENKINS_PATH}/ /${JENKINS_PATH}/;
    proxy_http_version 1.1;
 
    proxy_set_header   Connection        $connection_upgrade;
