--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - SSH_PRIVATE_FILE_PATH=${SSH_PRIVATE_FILE_PATH}
       - ADMIN_USERS=${ADMIN_USERS}
       - GITHUB_REPO_OWNER=${GITHUB_REPO_OWNER}
+      - CASC_VAULT_FILE=/run/secrets/jcasc_vault
     ports:
       - 8080:8080
       - 50000:50000
@@ -32,6 +33,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       # just mounting to ease development
       - ./jenkins/config/casc.yaml:/usr/share/jenkins/ref/casc.yaml
+    # secrets:
+    #   - jcasc_vault
   
   web:
     container_name: nginx
@@ -92,3 +95,7 @@ services:
 
 networks:
   jenkins-net:
+
+# secrets:
+#   jcasc_vault:
+#     file: ./keys/jcasc_vault
