Changes: - Jenkins receiving appRole through env vars - Getting role_id and secret_id from vault output - Restarting jenkins to apply changes - Vault config working!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
       - SSH_PRIVATE_FILE_PATH=${SSH_PRIVATE_FILE_PATH}
       - ADMIN_USERS=${ADMIN_USERS}
       - GITHUB_REPO_OWNER=${GITHUB_REPO_OWNER}
-      # - CASC_VAULT_FILE=/run/secrets/jcasc_vault
+      - JENKINS_VAULT_ROLE_ID=${JENKINS_VAULT_ROLE_ID}
+      - JENKINS_VAULT_SECRET_ID=${JENKINS_VAULT_SECRET_ID}
     ports:
       - 8080:8080
       - 50000:50000
