--- a/jenkins/config/casc.yaml
+++ b/jenkins/config/casc.yaml
@@ -19,12 +19,14 @@ credentials:
       - vaultAppRoleCredential:
           id: "vault-app-role"
           # these commited values are test values, replace with your own
-          roleId: f4c04194-1ced-3c39-ae93-e1b2705036a5
-          secretId: 5f735c64-c8c8-4508-4b7b-2a6b38fa82f9
+          roleId: ${JENKINS_VAULT_ROLE_ID}
+          secretId: ${JENKINS_VAULT_SECRET_ID}
           scope: GLOBAL
 
 
 security:
+  sSHD:
+    port: 0
   queueItemAuthenticator:
     authenticators:
       - global:
