--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,20 +8,18 @@ services:
         DOCKER_GID: ${DOCKER_GID}
       labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.jenkins.rule=Host(`mordor`)"
+      - "traefik.http.routers.jenkins.rule=Host(`${HOST}`)"
       - "traefik.http.routers.jenkins.rule=PathPrefix(`/jenkins`)"
       - "traefik.http.services.jenkins.loadbalancer.server.port=8080"
     
     environment:
       - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
-      - JENKINS_ADMIN_ID=${JENKINS_ADMIN_ID}
-      - JENKINS_ADMIN_PASSWORD=${JENKINS_ADMIN_PASSWORD}
       - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
       - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
       - GITHUB_ACCESS_TOKEN=${GITHUB_ACCESS_TOKEN}
       - GITHUB_PRIVATE_KEY=${GITHUB_PRIVATE_KEY}
       - GITHUB_APP_ID=${GITHUB_APP_ID}
-      - DOCKER_URI=${DOCKER_URI}
+      - DOCKER_PATH=${DOCKER_PATH}
       - SSH_PRIVATE_FILE_PATH=${SSH_PRIVATE_FILE_PATH}
       - ADMIN_USERS=${ADMIN_USERS}
       - GITHUB_REPO_OWNER=${GITHUB_REPO_OWNER}
@@ -59,7 +57,7 @@ services:
     container_name: "simple-service"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`mordor`)"
+      - "traefik.http.routers.whoami.rule=Host(`${HOST}`)"
       - "traefik.http.routers.whoami.rule=Path(`/web`)"
       - "traefik.http.services.whoami.loadbalancer.server.port=80"
     networks:
@@ -70,7 +68,7 @@ services:
     image: vault:latest
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.vault.rule=Host(`mordor`)"
+      - "traefik.http.routers.vault.rule=Host(`${HOST}`)"
       - "traefik.http.routers.vault.rule=PathPrefix(`/`)"
       # - "traefik.http.routers.vault.middlewares=vault-middleware"
       # - "traefik.http.middlewares.vault-middleware.stripprefix.prefixes=/vault"
@@ -101,6 +99,19 @@ services:
         - ./consul/config:/config
         - ./consul_data/data:/data
     command: agent -server  -bind 0.0.0.0 -client 0.0.0.0 -bootstrap-expect=1 #-data-dir=/data
+    networks:
+      - jenkins-net
+  
+  ngrok:
+    container_name: ngrok
+    image: wernight/ngrok:latest
+    ports:
+      - "4040:4040"
+    environment:
+      - NGROK_AUTH=${NGROK_AUTH}
+      - NGROK_PORT=${NGROK_PORT}
+      - NGROK_DEBUG=${NGROK_DEBUG}
+      - NGROK_LOOK_DOMAIN=${HOST}
     networks:
       - jenkins-net
   
